--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
         </ul>
     </nav>
     <div class = "playerStats">
-        <div class = "playerPurple"></div>
-        <div class = "playerRed"></div>
+        <h3 class = "playerPurple">Player Purple:</h3>
+        <h3 class = "playerRed">Player Red:</h3>
     </div>
 
     <main class = "mancalaBoard">
