initiated mancala board

--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
         <h3 class = "playerRed">Player Red:</h3>
     </div>
 
-    <main class = "mancalaBoard">
+    <main class = "mancala">
+        <div class = "mancalaBoard">
 
+        </div>
     </main>
     <div class = "infoBar">
 
