refactored html with columns

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
            <li>Start Game</li>
            <li>Mancala</li>
            <li class= "accordionHowTo">How to Play</li>
-           <section class="panel">
+           <aside class="panel">
             <p>Play:  The game begins with one player picking up all of the pieces in any one of the holes on their side.  Moving counter-clockwise, the player deposits one of the stones in each hole until the stones run out. 
                 If you run into your own store, deposit one piece in it. If you run into your opponent's store, skip it.2. 
                 If the last piece you drop is in your own store, you get a free turn.
@@ -24,7 +24,7 @@
                    4. Always place all captured pieces in your store.
                 Winning the game: The game ends when all six spaces on one side of the Mancala board are empty.  the player who still has pieces on his side of the board when the game ends capture all of those pieces. The winner is the player with the most pieces..
             </p>
-            </section>
+        </aside>
         </ul>
     </nav>
     <section class = "playerStats">
@@ -32,23 +32,28 @@
         <h3 class = "playerRed">Player Red:</h3>
     </section>
 
-    
-        <main class = "mancalaBoard">
-            <div class = "purplePit"></div>
-                <div class = "hole1"></div>
-                <div class = "hole2"></div>
-                <div class = "hole3"></div>
-                <div class = "hole4"></div>
-                <div class = "hole5"></div>
-                <div class = "hole6"></div>   
-            <div class = "redPit"></div>
-                <div class = "hole7"></div>
-                <div class = "hole8"></div>
-                <div class = "hole9"></div>
-                <div class = "hole10"></div>
-                <div class = "hole11"></div>
-                <div class = "hole12"></div>
+    <div class="mancalaBoard">
+    <figure class = "purplePit"></figure>
+        <main class = "board">
+            <section class = "topHoles">
+                <div class = "hole" id="ht1"></div>
+                <div class = "hole"id="ht2"></div>
+                <div class = "hole"id="ht3"></div>
+                <div class = "hole"id="ht4"></div>
+                <div class = "hole"id="ht5"></div>
+                <div class = "hole"id="ht6"></div> 
+            </section>
+            <section  class = "bottomHoles">
+                <div class = "hole"id="hb6"></div>
+                <div class = "hole"id="hb5"></div>
+                <div class = "hole"id="hb4"></div>
+                <div class = "hole"id="hb3"></div>
+                <div class = "hole"id="hb2"></div>
+                <div class = "hole"id="hb1"></div>
+            </section>
         </main>
+    </div>
+        <figure class = "redPit"></figure>
     <aside class = "infoBar">
 
     </aside>
