message working on naming conventions

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <figure class = "purplePit"></figure>
         <main class = "board">
             <section class = "topHoles">
+              <div class = 
                 <div class = "hole" id="ht1"></div>
                 <div class = "hole"id="ht2"></div>
                 <div class = "hole"id="ht3"></div>
