added more semantic code

--- a/index.html
+++ b/index.html
@@ -32,28 +32,29 @@
         <h3 class = "playerRed">Player Red:</h3>
     </section>
 
-    <div class="mancalaBoard">
-    <figure class = "purplePit"></figure>
-        <main class = "board">
-            <section class = "topHoles">
-              <div class = 
-                <div class = "hole" id="ht1"></div>
-                <div class = "hole"id="ht2"></div>
-                <div class = "hole"id="ht3"></div>
-                <div class = "hole"id="ht4"></div>
-                <div class = "hole"id="ht5"></div>
-                <div class = "hole"id="ht6"></div> 
-            </section>
-            <section  class = "bottomHoles">
-                <div class = "hole"id="hb6"></div>
-                <div class = "hole"id="hb5"></div>
-                <div class = "hole"id="hb4"></div>
-                <div class = "hole"id="hb3"></div>
-                <div class = "hole"id="hb2"></div>
-                <div class = "hole"id="hb1"></div>
-            </section>
-        </main>
-    </div>
+</div>
+<div class="section midsection">
+  <div class="gameRows">
+    <div class="hole" id="h1"></div>
+    <div class="hole" id="h2"></div>
+    <div class="hole" id="h3"></div>
+    <div class="hole" id="h4"></div>
+    <div class="hole" id="h5"></div>
+    <div class="hole" id="h6"></div>
+  </div>
+  <div class="gameRows">
+    <div class="hole" id="h6"></div>
+    <div class="hole" id="h5"></div>
+    <div class="hole" id="h4"></div>
+    <div class="hole" id="h3"></div>
+    <div class="hole" id="h2"></div>
+    <div class="hole" id="h1"></div>
+  </div>
+</div>
+<div class="section endsection">
+    <div class="pot" id="mt"></div>        
+</div>
+</div>
         <figure class = "redPit"></figure>
     <aside class = "infoBar">
 
