--- a/index.html
+++ b/index.html
@@ -32,27 +32,30 @@
         <h3 class = "playerRed">Player Red:</h3>
     </section>
 
+    <div class="mancalaBoard">
+        <div class="centeredRows  pit">
+            <div class="hole"></div> 
 </div>
-<div class="section midsection">
-  <div class="gameRows">
-    <div class="hole" id="h1"></div>
-    <div class="hole" id="h2"></div>
-    <div class="hole" id="h3"></div>
-    <div class="hole" id="h4"></div>
-    <div class="hole" id="h5"></div>
-    <div class="hole" id="h6"></div>
+    <div class="centeredRows circles">
+    <div class="gameRows">
+        <div class="hole" id="h1"></div>
+        <div class="hole" id="h2"></div>
+        <div class="hole" id="h3"></div>
+        <div class="hole" id="h4"></div>
+        <div class="hole" id="h5"></div>
+        <div class="hole" id="h6"></div>
   </div>
-  <div class="gameRows">
-    <div class="hole" id="h6"></div>
-    <div class="hole" id="h5"></div>
-    <div class="hole" id="h4"></div>
-    <div class="hole" id="h3"></div>
-    <div class="hole" id="h2"></div>
-    <div class="hole" id="h1"></div>
+    <div class="gameRows">
+        <div class="hole" id="h6"></div>
+        <div class="hole" id="h5"></div>
+        <div class="hole" id="h4"></div>
+        <div class="hole" id="h3"></div>
+        <div class="hole" id="h2"></div>
+        <div class="hole" id="h1"></div>
   </div>
 </div>
-<div class="section endsection">
-    <div class="pot" id="mt"></div>        
+<div class="pit">
+    <div class="hole"></div>        
 </div>
 </div>
         <figure class = "redPit"></figure>
