made the board responsive

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </section>
 
     <div class="mancalaBoard">
-        <div class="centeredRows  pit">
+        <div class="centeredRows pit">
             <div class="hole"></div> 
         </div>
     <div class="centeredRows circles">
@@ -54,16 +54,12 @@
         <div class="hole" id="h1"></div>
   </div>
 </div>
-<div class="pit">
+<div class="centeredRows pit">
     <div class="hole"></div>        
 </div>
-    <aside class = "infoBar">
 
-    </aside>
-    
-    <footer><i>Mancala.</i> A game by Dorene St.Marthe</footer>
-     
-
-
+<div class="footer">
+    <p><i>Mancala.</i>A game by Dorene St.Marthe</p>
+</div>
 </body>
 </html>
