--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <script src="JS/script.js" defer></script>
     <title>Mancala</title>
@@ -14,7 +17,7 @@
      <nav class = "navbar" id="myNavbar">
         <ul>
            <li>Start Game</li>
-           <li>Mancala</li>
+           <li class="fontMancala">Mancala</li>
            <li class= "accordionHowTo">How to Play</li>
            <aside class="panel">
             <p>Play:  The game begins with one player picking up all of the pieces in any one of the holes on their side.  Moving counter-clockwise, the player deposits one of the stones in each hole until the stones run out. 
