--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         </ul>
     </nav>
     <section class = "playerStats">
-        <h3 class = "playerPurple">Player Purple:</h3>
-        <h3 class = "playerRed">Player Red:</h3>
+        <div class= "playerPurple players">Player Purple:</div>
+        <div class = "playerRed players">Player Red:</div>
     </section>
 
     <div class="mancalaBoard">
@@ -61,6 +61,9 @@
     <div class="hole"></div>        
 </div>
 
+<div class = "infobar">
+    <p>Are you ready to play? Press "Start Game" to begin.</p>
+</div>
 <div class="footer">
     <p><i>Mancala.</i>A game by Dorene St.Marthe</p>
 </div>
