--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
            <li class="fontMancala">Mancala</li>
            <li class= "accordionHowTo">How to Play</li>
            <aside class="panel">
-            <p>Play:  The game begins with one player picking up all of the pieces in any one of the holes on their side.  Moving counter-clockwise, the player deposits one of the stones in each hole until the stones run out. 
-                If you run into your own store, deposit one piece in it. If you run into your opponent's store, skip it.2. 
-                If the last piece you drop is in your own store, you get a free turn.
-                   3. If the last piece you drop is in an empty hole on your side, you capture that piece and any pieces in the hole directly opposite.
-                   4. Always place all captured pieces in your store.
-                Winning the game: The game ends when all six spaces on one side of the Mancala board are empty.  the player who still has pieces on his side of the board when the game ends capture all of those pieces. The winner is the player with the most pieces..
-            </p>
+            <p><strong><u>Play:</u></strong>The game begins with one player picking up all of the pieces in any one of the holes on their side. Moving counter-clockwise, the player deposits one of the stones in each hole until the stones run out. </p>
+            <p>1. If you run into your own store, deposit one piece in it. If you run into your opponent's store, skip it. </p>
+            <p>2. If the last piece you drop is in your own store, you get a free turn.</p>
+            <p>3. If the last piece you drop is in an empty hole on your side, you capture that piece and any pieces in the hole directly opposite.</p>
+            <p>4. Always place all captured pieces in your store.</p>
+            <p><strong><u>Winning the game:</u></strong>The game ends when all six spaces on one side of the Mancala board are empty.  the player who still has pieces on his side of the board when the game ends capture all of those pieces. The winner is the player with the most pieces.</p>
         </aside>
         </ul>
     </nav>
@@ -41,7 +40,7 @@
         </div>
     <div class="centeredRows circles">
     <div class="gameRows">
-        <div class="hole" id="h1"></div>
+        <div class="hole" id="h1" value="4"></div>
         <div class="hole" id="h2"></div>
         <div class="hole" id="h3"></div>
         <div class="hole" id="h4"></div>
@@ -62,7 +61,7 @@
 </div>
 
 <div class = "infobar">
-    <p>Are you ready to play? Press "Start Game" to begin.</p>
+    <p class = "gameProgress">Are you ready to play? Press "Start Game" to begin.</p>
 </div>
 <div class="footer">
     <p><i>Mancala.</i>A game by Dorene St.Marthe</p>
