--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     <div class="centeredRows circles">
     <div class="gameRows">
-        <div class="hole" id="h1" value="4"></div>
+        <div class="hole" id="h1"></div>
         <div class="hole" id="h2"></div>
         <div class="hole" id="h3"></div>
         <div class="hole" id="h4"></div>
