--- a/index.html
+++ b/index.html
@@ -40,20 +40,20 @@
         </div>
     <div class="centeredRows circles">
     <div class="gameRows">
-        <div class="hole" id="h1"></div>
-        <div class="hole" id="h2"></div>
-        <div class="hole" id="h3"></div>
-        <div class="hole" id="h4"></div>
-        <div class="hole" id="h5"></div>
-        <div class="hole" id="h6"></div>
+        <div class="hole" id="h1"><p>4</p></div>
+        <div class="hole" id="h2"><p>4</p></div>
+        <div class="hole" id="h3"><p>4</p></div>
+        <div class="hole" id="h4"><p>4</p></div>
+        <div class="hole" id="h5"><p>4</p></div>
+        <div class="hole" id="h6"><p>4</p></div>
   </div>
     <div class="gameRows">
-        <div class="hole" id="h6"></div>
-        <div class="hole" id="h5"></div>
-        <div class="hole" id="h4"></div>
-        <div class="hole" id="h3"></div>
-        <div class="hole" id="h2"></div>
-        <div class="hole" id="h1"></div>
+        <div class="hole" id="h6"><p>4</p></div>
+        <div class="hole" id="h5"><p>4</p></div>
+        <div class="hole" id="h4"><p>4</p></div>
+        <div class="hole" id="h3"><p>4</p></div>
+        <div class="hole" id="h2"><p>4</p></div>
+        <div class="hole" id="h1"><p>4</p></div>
   </div>
 </div>
 <div class="centeredRows pit">
