added event listeners and classes. (code does not work).

--- a/index.html
+++ b/index.html
@@ -38,22 +38,22 @@
         <div class="centeredRows pit">
             <div class="hole"></div> 
         </div>
-    <div class="centeredRows circles">
-    <div class="gameRows">
-        <div class="hole" ><p>4</p></div>
-        <div class="hole" ><p>4</p></div>
-        <div class="hole" ><p>4</p></div>
-        <div class="hole" ><p>4</p></div>
-        <div class="hole" ><p>4</p></div>
-        <div class="hole" ><p>4</p></div>
+    <div class="centeredRows circles purple">
+    <div class="gameRows ">
+        <div class="hole" ><h1>4</h1></div>
+        <div class="hole" ><h1>4</h1></div>
+        <div class="hole" ><h1>4</h1></div>
+        <div class="hole" ><h1>4</h1></div>
+        <div class="hole" ><h1>4</h1></div>
+        <div class="hole" ><h1>4</h1></div>
   </div>
-    <div class="gameRows">
-        <div class="hole" ><p>4</p></div>
-        <div class="hole" ><p>4</p></div>
-        <div class="hole" ><p>4</p></div>
-        <div class="hole" ><p>4</p></div>
-        <div class="hole" ><p>4</p></div>
-        <div class="hole" ><p>4</p></div>
+    <div class="gameRows red" >
+        <div class="hole" ><h1>4</h1></div>
+        <div class="hole" ><h1>4</h1></div>
+        <div class="hole" ><h1>4</h1></div>
+        <div class="hole" ><h1>4</h1></div>
+        <div class="hole" ><h1>4</h1></div>
+        <div class="hole" ><h1>4</h1></div>
   </div>
 </div>
 <div class="centeredRows pit">
