changed HTML id and added in variables to JS

--- a/index.html
+++ b/index.html
@@ -36,28 +36,28 @@
 
     <div class="mancalaBoard">
         <div class="centeredRows pit">
-            <div class="hole"></div> 
+            <div class="hole1"></div> 
         </div>
     <div class="centeredRows circles purple">
     <div class="gameRows ">
-        <div class="hole" ><h1>4</h1></div>
-        <div class="hole" ><h1>4</h1></div>
-        <div class="hole" ><h1>4</h1></div>
-        <div class="hole" ><h1>4</h1></div>
-        <div class="hole" ><h1>4</h1></div>
-        <div class="hole" ><h1>4</h1></div>
+        <div class="hole1" id= hole12></div>
+        <div class="hole1" id= hole12></div>
+        <div class="hole1" id= hole12></div>
+        <div class="hole1" id= hole12></div>
+        <div class="hole1" id= hole12></div>
+        <div class="hole1" id= hole12></div>
   </div>
     <div class="gameRows red" >
-        <div class="hole" ><h1>4</h1></div>
-        <div class="hole" ><h1>4</h1></div>
-        <div class="hole" ><h1>4</h1></div>
-        <div class="hole" ><h1>4</h1></div>
-        <div class="hole" ><h1>4</h1></div>
-        <div class="hole" ><h1>4</h1></div>
+        <div class="hole2"id= hole12></div>
+        <div class="hole2" id= hole12></div>
+        <div class="hole2" id= hole12></div>
+        <div class="hole2" id= hole12></div>
+        <div class="hole2" id= hole12></div>
+        <div class="hole2" id= hole12></div>
   </div>
 </div>
 <div class="centeredRows pit">
-    <div class="hole"></div>        
+    <div class="hole2"></div>        
 </div>
 
 <div class = "infobar">
