--- a/index.html
+++ b/index.html
@@ -36,28 +36,28 @@
 
     <div class="mancalaBoard">
         <div class="centeredRows pit">
-            <div class="hole1"></div> 
+            <div class="holes1"></div> 
         </div>
     <div class="centeredRows circles purple">
     <div class="gameRows ">
-        <div class="hole1" id= hole12></div>
-        <div class="hole1" id= hole12></div>
-        <div class="hole1" id= hole12></div>
-        <div class="hole1" id= hole12></div>
-        <div class="hole1" id= hole12></div>
-        <div class="hole1" id= hole12></div>
+        <div class="holes1" id= hole12></div>
+        <div class="holes1" id= hole11></div>
+        <div class="holes1" id= hole10></div>
+        <div class="holes1" id= hole9></div>
+        <div class="holes1" id= hole8></div>
+        <div class="holes1" id= hole7></div>
   </div>
     <div class="gameRows red" >
-        <div class="hole2"id= hole12></div>
-        <div class="hole2" id= hole12></div>
-        <div class="hole2" id= hole12></div>
-        <div class="hole2" id= hole12></div>
-        <div class="hole2" id= hole12></div>
-        <div class="hole2" id= hole12></div>
+        <div class="holes2"id= hole0></div>
+        <div class="holes2" id= hole1></div>
+        <div class="holes2" id= hole2></div>
+        <div class="holes2" id= hole3></div>
+        <div class="holes2" id= hole4></div>
+        <div class="holes2" id= hole5></div>
   </div>
 </div>
 <div class="centeredRows pit">
-    <div class="hole2"></div>        
+    <div class="holes2"></div>        
 </div>
 
 <div class = "infobar">
