--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
      <nav class = "navbar" id="myNavbar">
         <ul>
-           <li>Start Game</li>
+           <li class = "startGame">Start Game</li>
            <li class="fontMancala">Mancala</li>
            <li class= "accordionHowTo">How to Play</li>
            <aside class="panel">
@@ -38,8 +38,8 @@
         <div class="centeredRows pit">
             <div class="holes1"></div> 
         </div>
-    <div class="centeredRows circles purple">
-    <div class="gameRows ">
+    <div class="centeredRows circles ">
+    <div class="gameRows purple">
         <div class="holes1" id= hole12></div>
         <div class="holes1" id= hole11></div>
         <div class="holes1" id= hole10></div>
@@ -61,7 +61,7 @@
 </div>
 
 <div class = "infobar">
-    <p class = "gameProgress">Are you ready to play? Press "Start Game" to begin.</p>
+    
 </div>
 <div class="footer">
     <p><i>Mancala.</i>A game by Dorene St.Marthe</p>
