All mancala pieces on board

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 
     <div class="mancalaBoard">
         <div class="centeredRows pit">
-            <div class="holes1"></div> 
-        </div>
+            <div class="holes1 end1"></div> 
+        </div> 
     <div class="centeredRows circles ">
     <div class="gameRows purple">
         <div class="holes1" id= hole12></div>
@@ -56,10 +56,10 @@
         <div class="holes2" id= hole5></div>
   </div>
 </div>
-<div class="centeredRows pit">
-    <div class="holes2"></div>        
+<div class="centeredRows pit ">
+    <div class="holes2 end2"></div>        
 </div>
-
+</div>
 <div class = "infobar">
     
 </div>
